crates/sniff-test/tests/snapshots/cli__missing_report_root_diagnostic.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking report-roots v0.1.0 ([FIXTURE])
error: [sniff-test::analysis::missing-report-root] configured report root was not found
 --> [FIXTURE]/deny-missing.toml:2:17
  |
2 | report-roots = ["report_roots::missing_root"]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: configured under `[analysis].report-roots`
  = help: remove it or update it to a function in the current crate
  = help: for the full explanation, run `'[SNIFF-TEST]' explain 3pt9 --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: could not compile `report-roots` (lib) due to 1 previous error
