crates/sniff-test/tests/snapshots/cli__panic_invocation_can_be_allowed.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking direct-panic v0.1.0 ([FIXTURE])
    Finished `release` profile [optimized] target(s) in [TIME]
