crates/sniff-test/tests/snapshots/cli__safety_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
sniff-test: using config [FIXTURE]/sniff-test.toml
    Checking safety-requirements v0.1.0 ([FIXTURE])
warning: function `safety_requirements::generic_unsafe_trait_method_missing` reaches an unverifiable indirect call
   --> src/lib.rs:135:1
    |
135 | pub fn generic_unsafe_trait_method_missing<T: UnsafeGreeter>(greeter: T) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
note: panic may happen here: indirect call to undocumented trait method `safety_requirements::UnsafeGreeter::greet`
   --> src/lib.rs:139:14
    |
139 |     unsafe { greeter.greet(ptr) }
    |              ^^^^^^^^^^^^^^^^^^
    = help: add a guard, document the panic with `# Panics`, or add `// PANIC:` if a local invariant proves it cannot panic

warning: function `safety_requirements::generic_unsafe_trait_method_satisfied` reaches an unverifiable indirect call
   --> src/lib.rs:126:1
    |
126 | pub fn generic_unsafe_trait_method_satisfied<T: UnsafeGreeter>(greeter: T) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
note: panic may happen here: indirect call to undocumented trait method `safety_requirements::UnsafeGreeter::greet`
   --> src/lib.rs:132:14
    |
132 |     unsafe { greeter.greet(ptr) }
    |              ^^^^^^^^^^^^^^^^^^
    = help: add a guard, document the panic with `# Panics`, or add `// PANIC:` if a local invariant proves it cannot panic

warning: function `safety_requirements::unsafe_fn_pointer_missing_justification` reaches an unverifiable indirect call
   --> src/lib.rs:100:1
    |
100 | pub fn unsafe_fn_pointer_missing_justification() {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
note: panic may happen here: indirect call through an opaque callable
   --> src/lib.rs:103:14
    |
103 |     unsafe { function() }
    |              ^^^^^^^^^^
    = help: add a guard, document the panic with `# Panics`, or add `// PANIC:` if a local invariant proves it cannot panic

warning: function `safety_requirements::unsafe_fn_pointer_with_justification` reaches an unverifiable indirect call
  --> src/lib.rs:93:1
   |
93 | pub fn unsafe_fn_pointer_with_justification() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic may happen here: indirect call through an opaque callable
  --> src/lib.rs:97:14
   |
97 |     unsafe { function() }
   |              ^^^^^^^^^^
   = help: add a guard, document the panic with `# Panics`, or add `// PANIC:` if a local invariant proves it cannot panic

warning: public unsafe function `safety_requirements::undocumented_public` is missing `# Safety` docs
  --> src/lib.rs:33:1
   |
33 | pub unsafe fn undocumented_public(_ptr: *const u8) -> u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: document the caller obligations under a `# Safety` section

warning: unsafe call to `safety_requirements::read_byte` in `safety_requirements::missing_requirement` does not satisfy all `# Safety` requirements
  --> src/lib.rs:75:14
   |
75 |     unsafe { read_byte(ptr.as_ptr()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `safety_requirements::read_byte` documents `# Safety` here
  --> src/lib.rs:11:1
   |
11 | pub unsafe fn read_byte(ptr: *const u8) -> u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: missing safety requirement `initialized: pointer must reference initialized memory.`
   = help: add named bullets under the applicable `// SAFETY:` comment for each missing requirement

warning: unsafe call to `safety_requirements::read_byte` in `safety_requirements::safety_marker_boundary_missing_requirements` does not satisfy all `# Safety` requirements
  --> src/lib.rs:86:14
   |
86 |     unsafe { read_byte(ptr.as_ptr()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `safety_requirements::read_byte` documents `# Safety` here
  --> src/lib.rs:11:1
   |
11 | pub unsafe fn read_byte(ptr: *const u8) -> u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: missing safety requirement `valid_ptr: pointer must be non-null.`
   = note: missing safety requirement `initialized: pointer must reference initialized memory.`
   = help: add named bullets under the applicable `// SAFETY:` comment for each missing requirement

warning: unsafe call to `safety_requirements::private_unsafe_no_docs` in `safety_requirements::missing_justification` is missing a `// SAFETY:` justification
  --> src/lib.rs:90:14
   |
90 |     unsafe { private_unsafe_no_docs() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add a `// SAFETY:` comment above the unsafe block or call site

warning: unsafe call to `unsafe function pointer` in `safety_requirements::unsafe_fn_pointer_missing_justification` is missing a `// SAFETY:` justification
   --> src/lib.rs:103:14
    |
103 |     unsafe { function() }
    |              ^^^^^^^^^^
    |
    = help: add a `// SAFETY:` comment above the unsafe block or call site

warning: unsafe call to `safety_requirements::UnsafeGreeter::greet` in `safety_requirements::generic_unsafe_trait_method_missing` does not satisfy all `# Safety` requirements
   --> src/lib.rs:139:14
    |
139 |     unsafe { greeter.greet(ptr) }
    |              ^^^^^^^^^^^^^^^^^^
    |
note: `safety_requirements::UnsafeGreeter::greet` documents `# Safety` here
   --> src/lib.rs:112:5
    |
112 |     unsafe fn greet(&self, ptr: *const u8);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: missing safety requirement `valid_ptr: pointer must be non-null.`
    = help: add named bullets under the applicable `// SAFETY:` comment for each missing requirement

warning: `safety-requirements` (lib) generated 10 warnings
    Finished `release` profile [optimized] target(s) in [TIME]
