crates/sniff-test/tests/snapshots/cli__source_aggregation_collapses_only_human_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking source-aggregation v0.1.0 ([FIXTURE])
error: [sniff-test::panics::panic-invocation] this panic is not accounted for on every path
  --> src/lib.rs:2:5
   |
 2 |     panic!("shared source");
   |     ^^^^^^^^^^^^^^^^^^^^^^^ the panic originates here
   |
help: account for this path at this call with `// PANIC:`, or document it under `# Panics`
  --> src/lib.rs:6:5
   |
 6 |     shared_panic_source();
   |     ^^^^^^^^^^^^^^^^^^^^^
help: account for this path at this call with `// PANIC:`, or document it under `# Panics`
  --> src/lib.rs:10:5
   |
10 |     shared_panic_source();
   |     ^^^^^^^^^^^^^^^^^^^^^
   = help: for the full explanation, run `'[SNIFF-TEST]' explain 8n6e --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

error: could not compile `source-aggregation` (lib) due to 1 previous error
