crates/sniff-test/tests/snapshots/cli__trusted_boundary_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking trusted-boundaries v0.1.0 ([FIXTURE])
warning: [sniff-test::panic::unresolved-call-target] function `trusted_boundaries::trusted_through_fn_pointer` has incomplete panic coverage
  --> src/lib.rs:24:5
   |
24 |     helper(flag);
   |     ^^^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:24:5
   |
24 |     helper(flag);
   |     ^^^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_through_fn_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::safety::unresolved-call-target] function `trusted_boundaries::trusted_through_fn_pointer` has incomplete safety coverage
  --> src/lib.rs:24:5
   |
24 |     helper(flag);
   |     ^^^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:24:5
   |
24 |     helper(flag);
   |     ^^^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_through_fn_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::panic::unresolved-call-target] function `trusted_boundaries::trusted_unresolved_wrapper` has incomplete panic coverage
  --> src/lib.rs:77:5
   |
77 |     callback();
   |     ^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:77:5
   |
77 |     callback();
   |     ^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_unresolved_wrapper` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::safety::unresolved-call-target] function `trusted_boundaries::trusted_unresolved_wrapper` has incomplete safety coverage
  --> src/lib.rs:77:5
   |
77 |     callback();
   |     ^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:77:5
   |
77 |     callback();
   |     ^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_unresolved_wrapper` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::panic::unresolved-call-target] function `trusted_boundaries::trusted_unsafe_through_fn_pointer` has incomplete panic coverage
  --> src/lib.rs:33:14
   |
33 |     unsafe { helper() }
   |              ^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:33:14
   |
33 |     unsafe { helper() }
   |              ^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_unsafe_through_fn_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: function `trusted_unsafe_through_fn_pointer` may have safety effect
  --> src/lib.rs:31:1
   |
31 | pub fn trusted_unsafe_through_fn_pointer(use_trusted: bool, unknown: unsafe fn()) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
32 |     let helper: unsafe fn() = if use_trusted { unsafe_helper } else { unknown };
33 |     unsafe { helper() }
   |              -------- this may have safety effect
   |
note: `trusted_unsafe_through_fn_pointer` calls `opaque function pointer` here
  --> src/lib.rs:33:14
   |
33 |     unsafe { helper() }
   |              ^^^^^^^^
   = help: if this call cannot have safety effect, explain why with a `// SAFETY:` comment
   = help: if `trusted_unsafe_through_fn_pointer` can have safety effect, add a `# Safety` section

warning: [sniff-test::safety::unresolved-call-target] function `trusted_boundaries::trusted_unsafe_through_fn_pointer` has incomplete safety coverage
  --> src/lib.rs:33:14
   |
33 |     unsafe { helper() }
   |              ^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:33:14
   |
33 |     unsafe { helper() }
   |              ^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `trusted_unsafe_through_fn_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::safety::undocumented-invocation] call to `unsafe_helper` may produce the safety effect, but `unsafe_helper` has no documented `# Safety` obligation
  --> src/lib.rs:28:14
   |
28 |     unsafe { unsafe_helper() }
   |              ^^^^^^^^^^^^^^^
   |
   = help: document the callee's caller obligations under a `# Safety` section

warning: function `trusted_with_docs` may have panic effect
  --> src/lib.rs:5:1
   |
 5 | pub fn trusted_with_docs(flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
 6 |     trusted_doc_helper(flag);
   |     ------------------------ this may have panic effect
   |
note: `trusted_with_docs` calls `trusted_doc_helper` here
  --> src/lib.rs:6:5
   |
 6 |     trusted_doc_helper(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
note: `trusted_doc_helper` has documented `# Panics` obligation
  --> src/lib.rs:14:5
   |
14 |   /// # Panics
   |  _____^
15 | | /// Panics when `flag` is false.
16 | | fn trusted_doc_helper(flag: bool) {
   | |_________________________________^
   = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `trusted_with_docs` can have panic effect, add a `# Panics` section

warning: [sniff-test::panic::unresolved-call-target] function `trusted_boundaries::untrusted_unresolved_wrapper` has incomplete panic coverage
  --> src/lib.rs:81:5
   |
81 |     callback();
   |     ^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:81:5
   |
81 |     callback();
   |     ^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `untrusted_unresolved_wrapper` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::safety::unresolved-call-target] function `trusted_boundaries::untrusted_unresolved_wrapper` has incomplete safety coverage
  --> src/lib.rs:81:5
   |
81 |     callback();
   |     ^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:81:5
   |
81 |     callback();
   |     ^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `untrusted_unresolved_wrapper` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `trusted-boundaries` (lib) generated 11 warnings
    Finished `release` profile [optimized] target(s) in [TIME]
