crates/sniff-test/tests/snapshots/cli__unresolved_call_target_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking indirect-calls v0.1.0 ([FIXTURE])
warning: function `call_documented` may have panic effect
  --> src/lib.rs:10:1
   |
10 | pub fn call_documented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
11 |     value.documented(flag);
   |     ---------------------- this may have panic effect
   |
note: `call_documented` calls `documented` here
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
note: `documented` has documented `# Panics` obligation
  --> src/lib.rs:2:9
   |
 2 |       /// # Panics
   |  _________^
 3 | |     ///
 4 | |     /// Panics when `flag` is false.
 5 | |     fn documented(&self, flag: bool);
   | |_____________________________________^
   = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `call_documented` can have panic effect, add a `# Panics` section

warning: [sniff-test::safety::unresolved-call-target] function `indirect_calls::call_documented` has incomplete safety coverage
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved generic-dispatch call target (indirect_calls::Risky::documented)
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   = note: the call to `indirect_calls::Risky::documented` uses generic dispatch
   = note: reachable from `call_documented` to `documented`
   = help: document caller-visible `# Safety` obligations on the trait method declaration

warning: [sniff-test::panic::unresolved-call-target] function `indirect_calls::call_dyn` has incomplete panic coverage
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved dynamic-dispatch call target (indirect_calls::Risky::undocumented)
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the call to `indirect_calls::Risky::undocumented` uses dynamic dispatch
   = note: reachable from `call_dyn` to `undocumented`
   = help: document caller-visible `# Panics` obligations on the trait method declaration

warning: [sniff-test::safety::unresolved-call-target] function `indirect_calls::call_dyn` has incomplete safety coverage
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved dynamic-dispatch call target (indirect_calls::Risky::undocumented)
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the call to `indirect_calls::Risky::undocumented` uses dynamic dispatch
   = note: reachable from `call_dyn` to `undocumented`
   = help: document caller-visible `# Safety` obligations on the trait method declaration

warning: [sniff-test::panic::unresolved-call-target] function `indirect_calls::call_pointer` has incomplete panic coverage
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `call_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::safety::unresolved-call-target] function `indirect_calls::call_pointer` has incomplete safety coverage
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved function-pointer call target
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
   = note: this call uses a function pointer
   = note: reachable from `call_pointer` to `indirect call through a function pointer`
   = help: make the callee concrete or make its possible implementations available to analysis

warning: [sniff-test::panic::unresolved-call-target] function `indirect_calls::call_undocumented` has incomplete panic coverage
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic coverage is incomplete here: unresolved generic-dispatch call target (indirect_calls::Risky::undocumented)
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the call to `indirect_calls::Risky::undocumented` uses generic dispatch
   = note: reachable from `call_undocumented` to `undocumented`
   = help: document caller-visible `# Panics` obligations on the trait method declaration

warning: [sniff-test::safety::unresolved-call-target] function `indirect_calls::call_undocumented` has incomplete safety coverage
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety coverage is incomplete here: unresolved generic-dispatch call target (indirect_calls::Risky::undocumented)
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the call to `indirect_calls::Risky::undocumented` uses generic dispatch
   = note: reachable from `call_undocumented` to `undocumented`
   = help: document caller-visible `# Safety` obligations on the trait method declaration

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `indirect-calls` (lib) generated 8 warnings
    Finished `release` profile [optimized] target(s) in [TIME]
